--- a/project3.html
+++ b/project3.html
@@ -269,7 +269,9 @@
         </div>
         <div class="clear-float"></div>
         <h2>Part 6: Bells and Whistles</h2>
-        <p>I completed two Bells and Whistles. For the first one, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
+        <p> I completed two Bells and Whistles. For the first one, I made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
+        <a href="https://youtu.be/4YwmFifFEhw"> Link to my video</a>
+        <p>For the second B&W, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj3images/womanavg.jpg" alt="taj.jpg">
@@ -289,8 +291,6 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
-        <a href="https://youtu.be/4YwmFifFEhw"> Link to my video</a>
     </div>
 </body>
 </html>
