--- a/project3.html
+++ b/project3.html
@@ -241,7 +241,7 @@
         <p> Here is the mean face of the population:</p>
         <div class="image-gr">
         <div class="image-container">
-            <img src="proj3images/avgface.png" alt="taj.jpg">
+            <img src="proj3images/avgface.jpg" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
