--- a/project3.html
+++ b/project3.html
@@ -128,8 +128,8 @@
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
         });
     </script>
-    <p> In order to compute the mid-way face, we need to find the affine transformation matrix that transforms original points in Larry and Can's images to points in each triangle in the average shape trinagulation. 
-    <p>Let's say we have two triangles(one is from one of the original shapes, and one is from the average shape):</p>
+    <p> In order to compute the mid-way face, we need to find the affine transformation matrix that transforms original points from Larry and Can's images to points in each triangle in the average shape triangulation. 
+    <p>Let's say we have two triangles (one is from one of the original shapes, and one is from the average shape):</p>
     <p>Original triangle has points p<sub>1</sub>, p<sub>2</sub>, p<sub>3</sub>, with (x<sub>i</sub>, y<sub>i</sub>) coordinates for each point</p>
     <p>Transformed triangle has points q<sub>1</sub>, q<sub>2</sub>, q<sub>3</sub> with (x'<sub>i</sub>, y'<sub>i</sub>) coordinates for each point</p>
     <p>Then, we can write the following matrix multiplication for the transformation operation, the 1s  appended for affine operations:</p>
