--- a/project3.html
+++ b/project3.html
@@ -103,15 +103,15 @@
             <p> To morph two images, we need to select points of correspondences. I used the given tool to select points on the images. After defining the correspondences, I used Delaney Triangulation to triangulate the mean points of Larry David's and Can Ruso's images to find the mean shape. </p>
             <div class="image-grid">
             <div class="image-container">
-                <img src="proj3images/ruso_triangulate.png" alt="d_x.jpg">
+                <img src="proj3images/ruso_tr.png" alt="d_x.jpg">
                 <p class="image-subtitle">Ruso points</p>
             </div>
             <div class="image-container">
-                <img src="proj3images/david_triangulate.png" alt="d_y.jpg">
+                <img src="proj3images/david_tr.png" alt="d_y.jpg">
                 <p class="image-subtitle">David points</p>
             </div>
             <div class="image-container">
-                <img src="proj3images/mid_triangulate.png" alt="magnitude.jpg">
+                <img src="proj3images/mid_tr.png" alt="magnitude.jpg">
                 <p class="image-subtitle">Mean points on Can Ruso</p>
             </div>
         </div>
