--- a/project3.html
+++ b/project3.html
@@ -88,6 +88,12 @@
             overflow-x: auto;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+        });
+    </script>
 </head>
 <body>
     <h1>Project 3: Face Morphing</h1>
