--- a/project3.html
+++ b/project3.html
@@ -250,7 +250,7 @@
         </div>
         <div class="clear-float"></div>
         <h2>Part 5: Caricatures: Extrapolating from the mean</h2>
-            <p> I also caricaturize Can's image. Instead of warping Can's image to the mean shape, we can warp Can's face to can_shape + alpha(can_shape - average_shape) for a negative alpha and a positive alpha > 1 to extrapolate Can's face. Here are the results:</p>
+            <p> I also caricaturize Can's image. Instead of warping Can's image to the mean shape, we can warp Can's face to can_shape + alpha(can_shape - average_shape) for a negative alpha and a positive alpha > 1 to extrapolate Can's face. These basically exaggerates Can's facial features that are far away from the mean face and the mean face's features that are far away from Can's face. Here are the results:</p>
         <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
