--- a/project3.html
+++ b/project3.html
@@ -262,7 +262,7 @@
         </div>
         <div class="clear-float"></div>
         <h2>Part 6: Bells and Whistles</h2>
-        <p> I completed two Bells and Whistles. For the first one, I made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
+        <p> I completed two Bells and Whistles. For the first one, I made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. I used the morphing sequence defined earlier for each consecutive image. Here is the link:</p>
         <a href="https://youtu.be/4YwmFifFEhw"> Link to my video</a>
         <p>For the second B&W, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
         <div class="image-gri">
