--- a/project3.html
+++ b/project3.html
@@ -101,7 +101,7 @@
 
     <div class="Background">
         <h2>Background</h2>
-        <p> In this project, I aim to successfully face morph Larry David to my roommate Can, whom I watch Curb Your Enthuasiasm together.</p>
+        <p>In this project, I aim to successfully face-morph Larry David into my roommate Can, with whom I watch 'Curb Your Enthusiasm' together.</p>
     </div>
     
     <div class="project-overview">
