--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
     <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
     <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
+    <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
 </body>
 </html>
