--- a/project4.html
+++ b/project4.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 3: Face Morphing</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -216,18 +215,12 @@
         <h2>Image Rectification</h2>
             <p> For this part, I used all of the data points from Danes dataset to compute the mean face of the population. Firstly, I found the average of all the corresponding points for the given images. I warped all images to the average shape and computed their average to get the mean face. Here are a few examples of the warped images to the average shape:</p>
         <div class="clear-float"></div>
-        <div class="image-gri">
+        <div class="image-gr">
         <div class="image-container">
-            <img src="proj3images/morphed2.png" alt="taj.jpg">
+            <img src="proj4images/tikare.png" alt="taj.jpg">
         </div>
         <div class="image-container">
-            <img src="proj3images/morphed3.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj3images/morphed4.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj3images/morhped6.png" alt="taj.jpg">
+            <img src="proj4images/yastikkare.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
