--- a/project4.html
+++ b/project4.html
@@ -138,7 +138,7 @@
         wx' \\
         wy' \\
         w
-        \end{bmatrix} =
+        \end{bmatrix} 
         \]
     </div>
     <p>If we expand out the equations and divide wx' and wy' by w:</p>
