--- a/project4.html
+++ b/project4.html
@@ -144,7 +144,7 @@
     <p>If we expand out the equations and divide wx' and wy' by w:</p>
     <div class="equation">
                 \[
-        x' = \frac{ax + by + c}{gx + hy + 1}, \\
+        x' = \frac{ax + by + c}{gx + hy + 1} \\
         y' = \frac{dx + ey + f}{gx + hy + 1}
         \]
     </div>
