--- a/project4.html
+++ b/project4.html
@@ -249,36 +249,17 @@
         <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj3images/alpha1_7.png" alt="taj.jpg">
+            <img src="proj4images/IMG_5854.png" alt="taj.jpg">
         </div>
         <div class="image-container">
-            <img src="proj3images/alpha_0_7.png" alt="taj_sharp.jpg">
+            <img src="proj4images/IMG_5855.png" alt="taj_sharp.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
-        <h2>Part 6: Bells and Whistles</h2>
-        <p> I completed two Bells and Whistles. For the first one, I made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. I used the morphing sequence defined earlier for each consecutive image. Here is the link:</p>
-        <a href="https://youtu.be/4YwmFifFEhw"> Link to my video</a>
-        <p>For the second B&W, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
-        <div class="image-gri">
+        <div class="image-gr">
         <div class="image-container">
-            <img src="proj3images/womanavg.jpg" alt="taj.jpg">
-            <p class="image-subtitle">Mean Woman Face</p>
+            <img src="proj4images/mosaic1.png" alt="taj.jpg">
         </div>
-        <div class="image-container">
-            <img src="proj3images/warp_can_w.png" alt="taj_sharp.jpg">
-            <p class="image-subtitle">Shape only</p>
-        </div>
-        <div class="image-container">
-            <img src="proj3images/can_appear.png" alt="taj_sharp.jpg">
-            <p class="image-subtitle">Appearance only</p>
-        </div>
-        <div class="image-container">
-            <img src="proj3images/can_both.png" alt="taj_sharp.jpg">
-            <p class="image-subtitle">Both</p>
-        </div>
-        </div>
-        <div class="clear-float"></div>
     </div>
 </body>
 </html>
