--- a/project4.html
+++ b/project4.html
@@ -271,7 +271,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <div class="image">
+        <div class="imag-gri">
         <div class="image-container">
             <img src="proj4images/mosaic1.png" alt="taj.jpg">
         </div>
