--- a/project4.html
+++ b/project4.html
@@ -47,7 +47,8 @@
             margin-bottom: 20px;
         }
         .image img {
-            max-width: 100%;
+            max-width: none;
+            width: auto;
             height: auto;
         }
         .image-gri {
