--- a/project4.html
+++ b/project4.html
@@ -271,16 +271,7 @@
             <p class="image-subtitle">Full mask</p>
         </div>
         </div>
-        <div class="clear-float"></div>
-        <div class="image-gri">
-        <div class="image-container">
-            <img src="proj4images/IMG_5854.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj4images/IMG_5855.png" alt="taj_sharp.jpg">
-        </div>
-        </div>
-        <div class="clear-float"></div>
+        <p> After creating the mask, I used a Laplacian stack with original and warped images padded to the final image's shape to create the mosaic:
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/IMG_5854.png" alt="taj.jpg">
