--- a/project4.html
+++ b/project4.html
@@ -48,7 +48,7 @@
         }
         .image img {
             max-width: none;
-            width: auto;
+            width: 150%;
             height: auto;
         }
         .image-gri {
@@ -281,7 +281,11 @@
         </div>
         </div>
         <div class="clear-float"></div>
+        <div class="image">
+        <div class="image-container">
         <img src="proj4images/mosaic1.png" alt="taj.jpg">
+        </div>
+        </div>
     </div>
 </body>
 </html>
