--- a/project4.html
+++ b/project4.html
@@ -47,9 +47,7 @@
             margin-bottom: 20px;
         }
         .image img {
-            max-width: none;
-            width: 1350%;
-            height: auto;
+             transform: scale(2);
         }
         .image-gri {
             display: grid;
