--- a/project4.html
+++ b/project4.html
@@ -47,7 +47,9 @@
             margin-bottom: 20px;
         }
         .image img {
-             transform: scale(1.5);
+            max-width: 150%;
+            width: 150%;
+            height: auto;
         }
         .image-gri {
             display: grid;
