--- a/project4.html
+++ b/project4.html
@@ -273,6 +273,21 @@
         <img src="proj4images/mosaic1.png" alt="taj.jpg">
         </div>
         </div>
+        <p> Here are other examples of mosaicing with their original images, mask, and the final blended image:</p>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/img3-1.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
+        <div class="image">
+        <div class="image-container">
+        <img src="proj4images/img3-ful.png" alt="taj.jpg">
+        </div>
+        </div>
     </div>
 </body>
 </html>
