--- a/project4.html
+++ b/project4.html
@@ -274,6 +274,18 @@
         </div>
         </div>
         <p> Here are other examples of mosaicing with their original images, mask, and the final blended image:</p>
+        <div class="image-grid">
+        <div class="image-container">
+            <img src="proj4images/mask3-1.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/mask3-2.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/mask3-3.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/img3-1.png" alt="taj.jpg">
