--- a/project4.html
+++ b/project4.html
@@ -297,7 +297,7 @@
         <div class="clear-float"></div>
         <div class="image">
         <div class="image-container">
-        <img src="proj4images/img3-ful.png" alt="taj.jpg">
+        <img src="proj4images/img3_ful.png" alt="taj.jpg">
         </div>
         </div>
     </div>
