--- a/project4.html
+++ b/project4.html
@@ -208,7 +208,7 @@
         <div class="clear-float"></div>
         <p> I also applied the morphing sequence to my father and myself. It turns out we look pretty alike:</p>
         <h2>Image Rectification</h2>
-            <p> For image rectification I used the warping function I defined earlier with a little nuance. Instead of selecting corresponding points between two images, I chose the edges of a rectangle or a square shape from an image and I manually defined the corresponding points so that these edges would form a rectified rectangular shape. Here are the corresponding points I have chosen and the resultant rectified image:</p>
+            <p> For image rectification I used the inverse warping with homography I calculated earlier. Instead of selecting corresponding points between two images, I chose the edges of a rectangle or a square shape from an image and I manually defined the corresponding points so that these edges would form a rectified rectangular shape. Here are the corresponding points I have chosen and the resultant rectified image:</p>
         <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
